Make sure full-width media & text blocks don't have a gap between them.

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -824,6 +824,10 @@
 			&.has-media-on-the-right {
 				grid-template-columns: auto 60%;
 			}
+
+			&.alignfull + .wp-block-media-text {
+				margin-top: -44px;
+			}
 		}
 	}
 
