--- a/style.css
+++ b/style.css
@@ -4283,6 +4283,9 @@ body.page .main-navigation {
   .entry .entry-content .wp-block-media-text.has-media-on-the-right {
     grid-template-columns: auto 60%;
   }
+  .entry .entry-content .wp-block-media-text.alignfull + .wp-block-media-text {
+    margin-top: -44px;
+  }
 }
 
 .entry .entry-content .wp-block-columns.alignfull {
